--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.6.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "html-react-parser": "^4.0.0",
     "next": "13.4.9",
+    "node-sass": "^9.0.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-type-animation": "^3.1.0",
+    "sass": "^1.63.6",
     "tailwindcss": "3.3.2"
   }
 }
